# house-price-backend

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
app/: main.py
app/api/: main.py
app/api/routes/: houses.py  locations.py
app/core/: config.py  model_loader.py
app/models/: house.py  location.py
database/: env.py
database/seeders/: locations.sql  main.py
database/versions/: 565fff8709df_create_locations_table.py  ce250e7873a8_create_houses_table.py
