[project]
name = "house-price-backend"
version = "0.1.0"
description = "This is a house price prediction project developed as part of a project-based learning assignment for the Web Service Technology and Machine Learning Ops course."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.5",
    "fastapi[standard]>=0.118.0",
    "joblib>=1.5.2",
    "psycopg[binary]>=3.2.10",
    "pydantic-settings>=2.11.0",
    "scikit-learn>=1.7.2",
    "sqlmodel>=0.0.25",
    "xgboost-cpu>=3.0.5",
]
